# vvvdaw

./: .gitignore  CMakeLists.txt
resources/: style.qss
src/: main.cpp
src/audio/: AudioEngine.cpp  AudioEngine.h  AudioUtils.h  DeviceInfo.h  RecordingManager.cpp  RecordingManager.h  RingBuffer.h  SPSCQueue.h  StreamingManager.cpp  StreamingManager.h
src/commands/: BusCommands.cpp  BusCommands.h  EventCommands.cpp  EventCommands.h  PluginCommands.cpp  PluginCommands.h  ProjectCommands.cpp  ProjectCommands.h  SnapshotCommand.cpp  SnapshotCommand.h  TrackCommands.cpp  TrackCommands.h
src/core/: Constants.h  Settings.cpp  Settings.h  TimeUtils.h  UndoCommand.h  UndoStack.cpp  UndoStack.h
src/gui/: BusPanelWidget.cpp  BusPanelWidget.h  MainWindow.cpp  MainWindow.h  MeasureRuler.cpp  MeasureRuler.h  PluginListWidget.cpp  PluginListWidget.h  PluginParameterWidget.cpp  PluginParameterWidget.h  PluginWindow.cpp  PluginWindow.h  SettingsDialog.cpp  SettingsDialog.h  TempoWidget.cpp  TempoWidget.h  TimelineRuler.cpp  TimelineRuler.h  TrackPanelWidget.cpp  TrackPanelWidget.h  TrackViewWidget.cpp  TrackViewWidget.h  TransportPanel.cpp  TransportPanel.h  WaveformPainter.cpp  WaveformPainter.h
src/model/: AudioBus.h  AudioClip.cpp  AudioClip.h  AudioEvent.cpp  AudioEvent.h  Project.cpp  Project.h  Track.cpp  Track.h
src/plugin/: LV2Instance.cpp  LV2Instance.h  MemoryStream.h  PluginChain.cpp  PluginChain.h  PluginInstance.h  PluginManager.cpp  PluginManager.h  VST3Instance.cpp  VST3Instance.h  VST3Module.h
